# c_lang_test_on_gtest

./: CMakeLists.txt  README.md  build.ps1
src/: CMakeLists.txt  count.c  count.h
test/: CMakeLists.txt  test.cc  test.cpp
